Fixed scrollbar visibility for the overlay dialogs

--- a/src/app/layout/page/overlay/overlay.component.scss
+++ b/src/app/layout/page/overlay/overlay.component.scss
@@ -4,6 +4,10 @@
   ::-webkit-scrollbar {
     display: none;
   }
+
+  body *::-webkit-scrollbar {
+    display: block;
+  }
 }
 
 .game-overlay {
